--- a/src/mesa/drivers/dri/i965/Makefile.sources
+++ b/src/mesa/drivers/dri/i965/Makefile.sources
@@ -95,6 +95,9 @@ i965_compiler_GENERATED_FILES = \
 	brw_nir_trig_workarounds.c
 
 i965_FILES = \
+	blorp.c \
+	blorp.h \
+	blorp_priv.h \
 	brw_binding_tables.c \
 	brw_blorp_blit.cpp \
 	brw_blorp_clear.cpp \
