--- a/src/mesa/drivers/dri/i965/Makefile.sources
+++ b/src/mesa/drivers/dri/i965/Makefile.sources
@@ -97,10 +97,10 @@ i965_compiler_GENERATED_FILES = \
 i965_FILES = \
 	blorp.c \
 	blorp.h \
+	blorp_clear.c \
 	blorp_priv.h \
 	brw_binding_tables.c \
 	brw_blorp_blit.cpp \
-	brw_blorp_clear.cpp \
 	brw_blorp.c \
 	brw_blorp.h \
 	brw_cc.c \
