--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -83,6 +83,10 @@ if HAVE_EGL
 SUBDIRS += egl
 endif
 
+if HAVE_INTEL_DRIVERS
+SUBDIRS += intel/tools
+endif
+
 ## Requires the i965 compiler (part of mesa) and wayland-drm
 if HAVE_INTEL_VULKAN
 SUBDIRS += intel/vulkan
