--- a/src/intel/Makefile.genxml.am
+++ b/src/intel/Makefile.genxml.am
@@ -19,31 +19,26 @@
 # FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
 # IN THE SOFTWARE.
 
-include Makefile.sources
-
-BUILT_SOURCES = $(GENXML_GENERATED_FILES)
-
-PYTHON_GEN = $(AM_V_GEN)$(PYTHON2) $(PYTHON_FLAGS)
+BUILT_SOURCES += $(GENXML_GENERATED_FILES)
 
 SUFFIXES = _pack.h .xml
 
-$(BUILT_SOURCES): gen_pack_header.py
+$(GENXML_GENERATED_FILES): genxml/gen_pack_header.py
 
 .xml_pack.h:
-	$(PYTHON_GEN) $(srcdir)/gen_pack_header.py $< > $@
+	$(MKDIR_GEN)
+	$(PYTHON_GEN) $(srcdir)/genxml/gen_pack_header.py $< > $@
 
-CLEANFILES = $(BUILT_SOURCES)
-
-EXTRA_DIST = \
-	gen4.xml \
-	gen45.xml \
-	gen5.xml \
-	gen6.xml \
-	gen7.xml \
-	gen75.xml \
-	gen8.xml \
-	gen9.xml \
-	genX_pack.h \
-	gen_macros.h \
-	gen_pack_header.py \
-	README
+EXTRA_DIST += \
+	genxml/gen4.xml \
+	genxml/gen45.xml \
+	genxml/gen5.xml \
+	genxml/gen6.xml \
+	genxml/gen7.xml \
+	genxml/gen75.xml \
+	genxml/gen8.xml \
+	genxml/gen9.xml \
+	genxml/genX_pack.h \
+	genxml/gen_macros.h \
+	genxml/gen_pack_header.py \
+	genxml/README
