intel: Add a new "common" library for more code sharing
The first thing to go in this new library is brw_device_info.

Signed-off-by: Jason Ekstrand <jason@jlekstrand.net>
Reviewed-by: Jordan Justen <jordan.l.justen@intel.com>

--- a/src/intel/Makefile.am
+++ b/src/intel/Makefile.am
@@ -53,6 +53,7 @@ CLEANFILES =
 EXTRA_DIST =
 
 include Makefile.blorp.am
+include Makefile.common.am
 include Makefile.genxml.am
 include Makefile.isl.am
 
