intel: s/brw_device_info/gen_device_info/
Generated by:

sed -i -e 's/brw_device_info/gen_device_info/g' src/intel/**/*.c
sed -i -e 's/brw_device_info/gen_device_info/g' src/intel/**/*.h
sed -i -e 's/brw_device_info/gen_device_info/g' **/i965/*.c
sed -i -e 's/brw_device_info/gen_device_info/g' **/i965/*.cpp
sed -i -e 's/brw_device_info/gen_device_info/g' **/i965/*.h

Signed-off-by: Jason Ekstrand <jason@jlekstrand.net>
Reviewed-by: Jordan Justen <jordan.l.justen@intel.com>

--- a/src/intel/Makefile.sources
+++ b/src/intel/Makefile.sources
@@ -7,8 +7,8 @@ BLORP_FILES = \
 	blorp/blorp_priv.h
 
 COMMON_FILES = \
-	common/brw_device_info.c \
-	common/brw_device_info.h
+	common/gen_device_info.c \
+	common/gen_device_info.h
 
 GENXML_GENERATED_FILES = \
 	genxml/gen4_pack.h \
