intel: Pull the guts of gen7_l3_state.c into a shared helper
Signed-off-by: Jason Ekstrand <jason@jlekstrand.net>
Reviewed-by: Jordan Justen <jordan.l.justen@intel.com>

--- a/src/intel/Makefile.sources
+++ b/src/intel/Makefile.sources
@@ -8,7 +8,9 @@ BLORP_FILES = \
 
 COMMON_FILES = \
 	common/gen_device_info.c \
-	common/gen_device_info.h
+	common/gen_device_info.h \
+	common/gen_l3_config.c \
+	common/gen_l3_config.h
 
 GENXML_GENERATED_FILES = \
 	genxml/gen4_pack.h \
