--- a/src/intel/vulkan/intel_icd.json.in
+++ b/src/intel/vulkan/intel_icd.json.in
@@ -1,7 +1,7 @@
 {
     "file_format_version": "1.0.0",
     "ICD": {
-        "library_path": "@install_libdir@/libvulkan_intel.so",
+        "library_path": "@ICD_DRIVER_PATH@",
         "abi_versions": "1.0.3"
     }
 }
