--- a/src/compiler/glsl/.gitignore
+++ b/src/compiler/glsl/.gitignore
@@ -5,6 +5,7 @@ glsl_parser.output
 glsl_test
 ir_expression_operation.h
 ir_expression_operation_strings.h
+ir_expression_operation_constant.h
 subtest-cr/
 subtest-lf/
 subtest-cr-lf/
