gallium/util: move endian detect into a separate file
This just ports the simpler endian detection bits, addrlib
sharing wants this outside gallium.

Acked-by: Marek Olšák <marek.olsak@amd.com>
Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>

--- a/src/util/Makefile.sources
+++ b/src/util/Makefile.sources
@@ -30,7 +30,8 @@ MESA_UTIL_FILES :=	\
 	strtod.c \
 	strtod.h \
 	texcompress_rgtc_tmp.h \
-	u_atomic.h
+	u_atomic.h \
+	u_endian.h
 
 MESA_UTIL_GENERATED_FILES = \
 	format_srgb.c
