--- a/src/intel/Makefile.sources
+++ b/src/intel/Makefile.sources
@@ -10,7 +10,8 @@ COMMON_FILES = \
 	common/gen_device_info.c \
 	common/gen_device_info.h \
 	common/gen_l3_config.c \
-	common/gen_l3_config.h
+	common/gen_l3_config.h \
+	common/gen_sample_positions.h
 
 GENXML_GENERATED_FILES = \
 	genxml/gen4_pack.h \
