--- a/src/mesa/drivers/dri/i965/Makefile.sources
+++ b/src/mesa/drivers/dri/i965/Makefile.sources
@@ -154,6 +154,7 @@ i965_FILES = \
 	brw_state_upload.c \
 	brw_structs.h \
 	brw_surface_formats.c \
+	brw_sync.c \
 	brw_tcs.c \
 	brw_tcs_surface_state.c \
 	brw_tes.c \
@@ -239,7 +240,6 @@ i965_FILES = \
 	intel_screen.c \
 	intel_screen.h \
 	intel_state.c \
-	intel_syncobj.c \
 	intel_tex.c \
 	intel_tex_copy.c \
 	intel_tex.h \
