gallium/hud: Add support for CPU frequency monitoring
Detect all of the CPUs in the system. Expose metrics
for min, max and current frequency in Hz.

Signed-off-by: Steven Toth <stoth@kernellabs.com>
Reviewed-by: Brian Paul <brianp@vmware.com>

--- a/src/gallium/auxiliary/Makefile.sources
+++ b/src/gallium/auxiliary/Makefile.sources
@@ -63,6 +63,7 @@ C_SOURCES := \
 	hud/hud_context.h \
 	hud/hud_cpu.c \
 	hud/hud_nic.c \
+	hud/hud_cpufreq.c \
 	hud/hud_diskstat.c \
 	hud/hud_sensors_temp.c \
 	hud/hud_driver_query.c \
