intel: aubinator: generate a standalone binary
Embed the xml files into the binary, so aubinator can be used from any
location.

v2: Split generation packing into another patch (Jason)
    Check for xxd (Jason)

v3: Fix out of tree builds (Jason)
    Generate custom variable name rather than names generated by xxd
    (Lionel)

v4: Move generated _xml.h files to genxml/ (Sirisha)

v5: Remove newline from makefile (Jason)

v6: Add comment on gen*_xml.h creation (Jason)

Signed-off-by: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
Reviewed-by: Jason Ekstrand <jason@jlekstrand.net>

--- a/src/intel/Makefile.genxml.am
+++ b/src/intel/Makefile.genxml.am
@@ -21,13 +21,23 @@
 
 BUILT_SOURCES += $(GENXML_GENERATED_FILES)
 
-SUFFIXES = _pack.h .xml
+SUFFIXES = _pack.h _xml.h .xml
 
 $(GENXML_GENERATED_FILES): genxml/gen_pack_header.py
 
 .xml_pack.h:
 	$(MKDIR_GEN)
 	$(PYTHON_GEN) $(srcdir)/genxml/gen_pack_header.py $< > $@
+
+# xxd generates variable names based on the path of the input file. We
+# prefer to generate our own name here, so it doesn't vary from
+# in/out-of-tree builds.
+%_xml.h:  %.xml Makefile
+	$(MKDIR_GEN)
+	$(AM_V_GEN) echo -n "static const uint8_t " > $@; \
+	sed -e 's,_xml.h,,' <<< "`basename $@`_xml[] = {" >> $@; \
+	cat $< | $(XXD) -i >> $@; \
+	echo "};" >> $@
 
 EXTRA_DIST += \
 	genxml/gen4.xml \
