--- a/src/intel/Makefile.sources
+++ b/src/intel/Makefile.sources
@@ -21,7 +21,12 @@ GENXML_GENERATED_FILES = \
 	genxml/gen7_pack.h \
 	genxml/gen75_pack.h \
 	genxml/gen8_pack.h \
-	genxml/gen9_pack.h
+	genxml/gen9_pack.h \
+	genxml/gen6_xml.h \
+	genxml/gen7_xml.h \
+	genxml/gen75_xml.h \
+	genxml/gen8_xml.h \
+	genxml/gen9_xml.h
 
 ISL_FILES = \
 	isl/isl.c \
