amd: add amd_kernel_code_t.h to the sources list
Otherwise it won't be picked in the tarball and the build will fail.

Fixes: 91ec6e56649 ("radeonsi/compute: Use the HSA abi for non-TGSI
compute shaders v3")
Signed-off-by: Emil Velikov <emil.velikov@collabora.com>

--- a/src/amd/Makefile.sources
+++ b/src/amd/Makefile.sources
@@ -2,6 +2,7 @@ COMMON_HEADER_FILES = \
 	common/sid.h \
 	common/r600d_common.h \
 	common/amd_family.h \
+	common/amd_kernel_code_t.h \
 	common/amdgpu_id.h
 
 ADDRLIB_FILES = \
